--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   geolocator: ^9.0.2
   permission_handler: ^11.2.0
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
